--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^14.13.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
